# CTML

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
.github/: FUNDING.yml
CTML/: CTML.h  Document.cpp  Document.h  Node.cpp  Node.h  tests.cpp
examples/: README.md
examples/file_loader/: README.md  file_loader.cpp
examples/file_loader/docs/: multiline.txt  test.txt
include/: ctml.hpp
tests/: behavior_tests.cpp  behaviourTests.cpp  catch.hpp  construction_tests.cpp  tests.cpp
